fix hover icons alignment

--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -29,7 +29,7 @@ $person-card-avatar-size: var(--person-card-avatar-size, 75px);
 $person-card-details-left-spacing: var(--person-card-details-left-spacing, 15px);
 $person-card-avatar-top-spacing: var(--person-card-avatar-top-spacing, 15px);
 $person-card-details-bottom-spacing: var(--person-card-details-bottom-spacing, 0);
-$person-card-base-icons-left-spacing: var(--person-card-base-icons-left-spacing, 83px);
+$person-card-base-icons-left-spacing: var(--person-card-base-icons-left-spacing, 63px);
 
 :host {
   box-shadow: $person-card-box-shadow;
